--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /ProyectoFinal_WebApps_web/nbproject/private/
 /ProyectoFinal_WebApps_web/build/
+/ProyectoFinal_WebApps/dist/
+/ProyectoFinal_WebApps/build/
+/ProyectoFinal_WebApps/nbproject/private/
