--- a/ProyectoFinal_WebApps/nbproject/private/private.properties
+++ b/ProyectoFinal_WebApps/nbproject/private/private.properties
@@ -1,5 +1,8 @@
 compile.on.save=true
-file.reference.bson-3.10.2.jar=C:\\Users\\Carlos\\Documents\\GitHub\\ProyectoFinal_WebApps\\ProyectoFinal_WebApps\\jars\\bson-3.10.2.jar
-file.reference.mongo-java-driver-3.10.2.jar=C:\\Users\\Carlos\\Documents\\GitHub\\ProyectoFinal_WebApps\\ProyectoFinal_WebApps\\jars\\mongo-java-driver-3.10.2.jar
-file.reference.mongodb-driver-3.10.2.jar=C:\\Users\\Carlos\\Documents\\GitHub\\ProyectoFinal_WebApps\\ProyectoFinal_WebApps\\jars\\mongodb-driver-3.10.2.jar
-user.properties.file=C:\\Users\\Carlos\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=F:\\Users\\tentacle\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
