--- a/ProyectoFinal_WebApps/nbproject/project.properties
+++ b/ProyectoFinal_WebApps/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProyectoFinal_WebApps
+application.vendor=valdez
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,19 +33,14 @@ dist.jar=${dist.dir}/ProyectoFinal_WebApps.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoFinal_WebApps
+endorsed.classpath=
 excludes=
-file.reference.bson-3.10.2.jar=dist\\bson-3.10.2.jar
 file.reference.bson-3.10.2.jar-1=jars\\bson-3.10.2.jar
-file.reference.mongo-java-driver-3.10.2.jar=dist\\mongo-java-driver-3.10.2.jar
 file.reference.mongo-java-driver-3.10.2.jar-1=jars\\mongo-java-driver-3.10.2.jar
-file.reference.mongodb-driver-3.10.2.jar=dist\\mongodb-driver-3.10.2.jar
 file.reference.mongodb-driver-3.10.2.jar-1=jars\\mongodb-driver-3.10.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bson-3.10.2.jar}:\
-    ${file.reference.mongodb-driver-3.10.2.jar}:\
-    ${file.reference.mongo-java-driver-3.10.2.jar}:\
     ${file.reference.bson-3.10.2.jar-1}:\
     ${file.reference.mongodb-driver-3.10.2.jar-1}:\
     ${file.reference.mongo-java-driver-3.10.2.jar-1}
