--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /ProyectoFinal_WebApps/dist/
 /ProyectoFinal_WebApps/build/
 /ProyectoFinal_WebApps/nbproject/private/
+ProyectoFinal_WebApps_web/nbproject/project.properties
+ProyectoFinal_WebApps_web/nbproject/project.xml
