--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /ProyectoFinal_WebApps/nbproject/private/
 ProyectoFinal_WebApps_web/nbproject/project.properties
 ProyectoFinal_WebApps_web/nbproject/project.xml
+ProyectoFinal_WebApps/nbproject/private/private.xml
