--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 ProyectoFinal_WebApps_web/nbproject/project.properties
 ProyectoFinal_WebApps_web/nbproject/project.xml
 ProyectoFinal_WebApps/nbproject/private/private.xml
+ProyectoFinal_WebApps/nbproject/private/private.xml
