--- a/ProyectoFinal_WebApps_web/nbproject/project.properties
+++ b/ProyectoFinal_WebApps_web/nbproject/project.properties
@@ -36,6 +36,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.bson-3.10.2.jar=..\\ProyectoFinal_WebApps\\jars\\bson-3.10.2.jar
+file.reference.commons-io-2.11.0.jar=web\\WEB-INF\\commons-io-2.11.0.jar
 file.reference.mongo-java-driver-3.10.2.jar=..\\ProyectoFinal_WebApps\\jars\\mongo-java-driver-3.10.2.jar
 file.reference.mongodb-driver-3.10.2.jar=..\\ProyectoFinal_WebApps\\jars\\mongodb-driver-3.10.2.jar
 file.reference.ProyectoFinal_WebApps.jar=..\\ProyectoFinal_WebApps\\dist\\ProyectoFinal_WebApps.jar
@@ -52,7 +53,8 @@ javac.classpath=\
     ${file.reference.bson-3.10.2.jar}:\
     ${file.reference.mongodb-driver-3.10.2.jar}:\
     ${file.reference.mongo-java-driver-3.10.2.jar}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.commons-io-2.11.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
