--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ ProyectoFinal_WebApps_web/nbproject/project.properties
 ProyectoFinal_WebApps_web/nbproject/project.xml
 ProyectoFinal_WebApps/nbproject/private/private.xml
 ProyectoFinal_WebApps/nbproject/private/private.xml
+/ProyectoFinal_WebApps_Persistencia/build/
+/ProyectoFinal_WebApps_Persistencia/dist/
