--- a/ProyectoFinal_WebApps/nbproject/project.properties
+++ b/ProyectoFinal_WebApps/nbproject/project.properties
@@ -36,14 +36,10 @@ dist.jlink.output=${dist.jlink.dir}/ProyectoFinal_WebApps
 endorsed.classpath=
 excludes=
 file.reference.bson-3.10.2.jar-1=jars\\bson-3.10.2.jar
-file.reference.mongo-java-driver-3.10.2.jar-1=jars\\mongo-java-driver-3.10.2.jar
-file.reference.mongodb-driver-3.10.2.jar-1=jars\\mongodb-driver-3.10.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bson-3.10.2.jar-1}:\
-    ${file.reference.mongodb-driver-3.10.2.jar-1}:\
-    ${file.reference.mongo-java-driver-3.10.2.jar-1}
+    ${file.reference.bson-3.10.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
