--- a/ProyectoFinal_WebApps_Persistencia/nbproject/project.properties
+++ b/ProyectoFinal_WebApps_Persistencia/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.output=${dist.jlink.dir}/ProyectoFinal_WebApps_Persistencia
 excludes=
 file.reference.mongo-java-driver-3.10.2.jar=jars\\mongo-java-driver-3.10.2.jar
 file.reference.mongodb-driver-3.10.2.jar=jars\\mongodb-driver-3.10.2.jar
-file.reference.ProyectoFinal_WebApps.jar=jars\\ProyectoFinal_WebApps.jar
+file.reference.ProyectoFinal_WebApps.jar=..\\ProyectoFinal_WebApps\\dist\\ProyectoFinal_WebApps.jar
 includes=**
 jar.compress=false
 javac.classpath=\
