--- a/ProyectoFinal_WebApps_web/nbproject/project.properties
+++ b/ProyectoFinal_WebApps_web/nbproject/project.properties
@@ -40,7 +40,7 @@ file.reference.commons-io-2.11.0.jar=web\\WEB-INF\\commons-io-2.11.0.jar
 file.reference.mongo-java-driver-3.10.2.jar=..\\ProyectoFinal_WebApps\\jars\\mongo-java-driver-3.10.2.jar
 file.reference.mongodb-driver-3.10.2.jar=..\\ProyectoFinal_WebApps\\jars\\mongodb-driver-3.10.2.jar
 file.reference.ProyectoFinal_WebApps.jar=..\\ProyectoFinal_WebApps\\dist\\ProyectoFinal_WebApps.jar
-file.reference.ProyectoFinal_WebApps_Persistencia.jar=jars\\ProyectoFinal_WebApps_Persistencia.jar
+file.reference.ProyectoFinal_WebApps_Persistencia.jar=..\\ProyectoFinal_WebApps_Persistencia\\dist\\ProyectoFinal_WebApps_Persistencia.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
