servlet registro actualizado con comentarios de como agregar admin,metodos RepAdmor con validacion de contra

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ ProyectoFinal_WebApps/nbproject/private/private.xml
 ProyectoFinal_WebApps/nbproject/private/private.xml
 /ProyectoFinal_WebApps_Persistencia/build/
 
+/ProyectoFinal_WebApps_Persistencia/dist/
